[optim] Cache start/end timepoints in ChainComponent to avoid allocations.